--- a/Mysql/读写性能优化.md
+++ b/Mysql/读写性能优化.md
@@ -1,5 +1,12 @@
 
+### 读写分离
 数据库设置主从，进行读写分离；
+
+### 数据分表
 数据分表，如按月份分表，需要统计数据就查总表；
+
+### 增加索引
 优化查询语句，适当增加索引；
+
+### 不常用的字段放在另一个表中
 字段优化，对不常用或者没有必要的字段可以考虑放在另外一张表里，避免单表数据过大，字段过多。
