--- a/Mysql/锁.md
+++ b/Mysql/锁.md
@@ -6,7 +6,7 @@
 不需要显示开启事务
 实际的程序需要显示开启事务
 事务要尽量的短小， 渠道数据马上退出， 不要做任何和数据无关的操作， 
-在事务的整个期间， 锁不会因为sql语句的结束了
+在事务的整个期间， 锁不会因为sql语句的结束而结束
 锁的生命周期是伴随整个事务的
 锁从读写就读， 分为读锁和写锁， 又叫共享锁和排他锁
 默认的select语句都是不带锁的恶， 
