--- a/Kafka/常见问题.md
+++ b/Kafka/常见问题.md
@@ -7,4 +7,17 @@ kafka有个会话机制， 会话期内， 生产者在发送消息， 消费者
 如果增加会话期限， 生产者也会更多的消息。
 解决的是办法是，确认机制，暂不清楚细节， 待续
 
+        
+消息的消费者， 一般用调用一个rpc服务， 
+
+
+消息堆积时， 消费没来得及处理的消息， 比如一个订单消息， 
+客户在发出订单后， 这个订单还没来得及处理， 客户就申请退单了
+退单是走的另一个流程， 
+订单消息还没有正常处理完毕， 退单程序就走下去了， 
+结果造成客户没有付款， 就直接得到退款了。 
+处理措施是：
+
+消息队列， 主要是完成异步处理， 这种情况是
+
 
