--- a/Mysql/隔离级别.md
+++ b/Mysql/隔离级别.md
@@ -4,7 +4,7 @@
 这个措施是种隔离，即把没有提交的隔离出去， 不会被本事务看到， 这个隔离级别叫做读已提交， 
 读已提交， 英文为read commited, 所以简称RC隔离级别
 
-### 解决不可重复读的RC隔离级别
+### 解决不可重复读的RR隔离级别
 脏读解决了， 现在又来了另一个问题，即不可重复读  
 事务A在一行数据期间， 这一行数据正在被事务B修改，但事务B没提交这一行。  
 事务A读完了之后， 事务B把这行的修改提交了，   
