--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -12,6 +12,18 @@ root
 数据库密码： 
 Ipfs@123ky
 
+
+
+
+测试数据库联通：
+```gotemplate
+[root@yangzhou010010019017 fil]# telnet 10.10.19.15 3306
+Trying 10.10.19.15...
+Connected to 10.10.19.15.
+Escape character is '^]'.
+J
+5.7.30
+
 从跳板机登陆到分配给自己的主机地址
 [fil@yangzhou010010001015 ~]$ ssh -p 62534 10.10.19.17
 Last login: Sat Jun 13 17:47:31 2020
