--- a/docs/15922660000050.md
+++ b/docs/15922660000050.md
@@ -1,7 +1,7 @@
 ### force-remote-worker完成一个任务的6个阶段
  6个阶段，被划分到4个进程，真实环境下， 每个进程运行在单独的一个主机上。 
  这些主机被化作一个组。 
- 每个P都有自己所在组的编号
+ 每个P都有自己所在组的编号. 
  同一个任务的
 #### P1
 p1 做sector开始的部分，包括存储空间，时空证明，非常耗时间的。 
