--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -1,12 +1,13 @@
-
+### 跳板机
 跳板机地址，
 ssh -p 62534 root@222.189.237.2
-
 
 从跳板机登陆到分配给自己的主机地址
 [fil@yangzhou010010001015 ~]$ ssh -p 62534 10.10.19.17
 Last login: Sat Jun 13 17:47:31 2020
 
+### 数据库
+#### 连接1
 数据库地址：
 222.189.237.8
 端口
@@ -16,7 +17,41 @@ root
 数据库密码： 
 Ipfs@123ky
 
-测试数据库联通：
+#### 连接2
+Conn = "root:Ipfs@123ky@tcp(10.10.19.15:3306)/lotus17?loc=Local&parseTime=true"
+
+
+#### 复制数据库
+跳板机登陆到10.10.19.15
+```
+[root@yangzhou010010001015 ~]# ssh -p 62534 10.10.19.15
+Last login: Wed Jun 17 08:39:23 2020
+[root@yangzhou010010019015 ~]# ifconfig
+bond0: flags=5187<UP,BROADCAST,RUNNING,MASTER,MULTICAST>  mtu 1500
+        inet 10.10.19.15  netmask 255.255.0.0  broadcast 10.10.255.255
+```
+
+创建数据库lotus17a
+```
+[root@yangzhou010010019015 ~]# mysql -uroot -pIpfs@123ky
+mysql> create database `lotus17a` ；
+mysql> exit 
+```
+
+数据库lotus的所有表复制到lotus17a：
+```
+[root@yangzhou010010019015 ~]#  mysqldump lotus -u root -pIpfs@123ky --add-drop-table | mysql lotus17a -u root -pIpfs@123ky
+mysqldump: [Warning] Using a password on the command line interface can be insecure.
+mysql: [Warning] Using a password on the command line interface can be insecure.
+[root@yangzhou010010019015 ~]# exit
+```
+
+
+
+
+
+
+#### 测试数据库联通：
 ```
 [root@yangzhou010010019017 fil]# telnet 10.10.19.15 3306
 Trying 10.10.19.15...
