--- a/区块链/问题排查.md
+++ b/区块链/问题排查.md
@@ -3,6 +3,10 @@
 ### lotus 链同步不下来的原因有哪些
 
 
+### 网络速度过慢， 修改/etc/resolv.conf, 去掉开始的两行
+[root@yangzhou010010019017 ~]# vi /etc/resolv.conf
+重启lotus， 再看速度
+
 ### 链同步不好， 会影响那些后续操作
 lotus-message
 
