--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -23,7 +23,7 @@
 ```
 
 
-### 解决connect: connection refused 问题
+### 解决wallet import时的 connect: connection refused 问题
 
 ```	
 [fil@yangzhou010010019019 ~]$ ./lotus wallet import ~/.genesis-sectors/pre-seal-t01000.key
@@ -72,24 +72,6 @@ fil       5290  5108  0 10:23 pts/2    00:00:00 grep --color=auto lotus
 
 
 
-我们自己开发的浏览器：
-
-https://interopnet.filscan.io/#/
-
-
-右上角是 挖矿排名， 
-
-左边是 算力排名
-
-右下是 消息列表 
-
-点from 字段， 可以看到该t3发出的所有消息， 
-
-method 是消息类型， 
-
-PreCommitSector 是p2 发出的消息
-ProveCommitSector 是p4 发出的消息
-transfer 是转账消息
 ### 导入key
 
 ```
@@ -286,7 +268,31 @@ Market (Locked):  0
 
 
 
+### 查看出块
 
+```
+[fil@yangzhou010010019017 ~]$ ./lotus chain list
+16690: (Jun 18 19:35:13) [ bafy2bzacecroatuzs2yjrqds33soghiwpy2sdqu5c27wtiy4q4ehb274ynlwo: t01003,bafy2bzacecjakae6pvhmim75465x7xw3owg54ef2esxmgq3nq6ipes5f64iw4: t01000, ]
+16691: (Jun 18 19:35:15) [ bafy2bzacechajp3whsvw2n66qay6kjtmbg2ei45c4l7mc46dmtiemk6xaj5my: t01000,bafy2bzacecdf67lipa2hwjtuntpusud6ujm66kygerrqzn4kti3qlfajjotv6: t01003, ]
+16692: (Jun 18 19:35:17) [ bafy2bzacebogsy6i3vka63a4lmqsovrb3navfpofbrum4if3opx2n2pbyfb44: t01000,bafy2bzaceawdpalspqkbzxu2dox3hnvgcnghbp2zvdx77ky6urbrlaxkjjayy: t01003, ]
+16693: (Jun 18 19:35:19) [ bafy2bzacedpu36aeiauzcjfdhcniefdoakddeqihqvjiwic4s5jxw4rfagjyy: t01003,bafy2bzacebgqc3gayqam7qe6sgrtvbcmzhztsx2ksigwd2oscn75n3c3ezv42: t01000, ]
+16694: (Jun 18 19:35:21) [ bafy2bzacece7dydffrqyklakmr66owlexybcyj5mvndxaujwouipowk655jeo: t01000,bafy2bzaceartwblbsasu3fz4beybjezn3d2ljzjngnzgpsg7zwjs6hvwlbcxy: t01003, ]
+16695: (Jun 18 19:35:23) [ bafy2bzacec5siibq5caum2ymi54iocxch6j3nb2olay23myti2xsd3z7ecam2: t01000,bafy2bzacecy74tsbj7d5uufu6m432zlgs34yvc2lx4eegvockbz3326jbka7y: t01003, ]
+16696: (Jun 18 19:35:25) [ bafy2bzacedty2fklgfcqbdmdyhcqtnriq7fzucy42g3zjeyckbvio6ua3knks: t01003,bafy2bzacebnsvvbiv6ndqj34vtgyy4qrx5tkeus7p26rv3q5hdmbg27hgt2bm: t01000, ]
+16697: (Jun 18 19:35:27) [ bafy2bzacedembqhtpl4tachy7nrte5xrani734apgh6rqd72fx3w4f3ptnes2: t01003, ]
+16698: (Jun 18 19:35:29) [ bafy2bzacecximntoey2hxis4uj6sikpketlz5pvixaq6kpzymqdxmwsgdyufg: t01003, ]
+16699: (Jun 18 19:35:31) [ bafy2bzacebnojt2yyj5cgkkt5bj666ph7j6b7x7wt6oon5ecnm7y3o5co7n6u: t01000,bafy2bzacecvvbftq7ww6krei3wyzju6krs7csvpqyhe43juucgrtjkhod57ii: t01003, ]
+16700: (Jun 18 19:35:33) [ bafy2bzacea3kb3aoy47quzpxvjwlrbgomhw5b6erpzmubmqlxyf4kh5dcl3hy: t01003,bafy2bzacebctxuht4b2gwnfg64in4n27bw6eolwrzcjgishx2mtntrxpqv4am: t01000, ]
+16701: (Jun 18 19:35:35) [ bafy2bzaceas5fwu3ifvfl6r2yn6tiwjynirx7pfdlpwjejnlklhcdy5p74snq: t01000,bafy2bzacece2bnzcyezu4v3dwy6vfrdnsoxzb7qn6e3khwod25ksy7xzunwkc: t01003, ]
+16702: (Jun 18 19:35:37) [ bafy2bzacedlnxengglb4krdoffxtzm4acrc45yavvujbkqamkh5ret5ma2efq: t01003,bafy2bzacecvcddhaaqpl3bcrbhjsrv5ydzpisn5lsdm76gdb4oyashwqtzv2m: t01000, ]
+16703: (Jun 18 19:35:39) [ bafy2bzacedvw6oh3bn5zlwpyd32mg64xws35tg35fk6mqtw4ngebyie6d25v4: t01000,bafy2bzaceaa6apvdlqxai4qxmq2kzzcqvdlzgemkogbcgqhlnwg6duvn7svqm: t01003, ]
+```
+
+### 扇区列表
+
+```
+[fil@yangzhou010010019017 ~]$ ./lotus-storage-miner sectors list
+```
 
 
 
