--- a/区块链/搭建私有链普通节点.md
+++ b/区块链/搭建私有链普通节点.md
@@ -262,9 +262,81 @@ sealer 在root用户下运行， 需要storage miner初始化， 注意这时的
 ```
 
 
-### （九）启动poster， sealer,  force-remote-worker的步骤相同和 《搭建公链节点》相同
+### 修改数据库：
+
+删除sectors表所有记录： delete from sectros; 
+
+删除tasks表所有记录
+
+修改miner_infos表的miner, worker的值。  nonce值可以为空
+```
+2	t01003	t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma	
+```
+
+确保 storage-nodes是对的：
+```
+1	10.10.4.23	1	10.10.4.23	nfs
+```
+
+修改media_infos表： 
+```
+1	1	nfs	536870912	536870912	1000	5000	2344	1344	0
+```
 
 
-###
+
+
+### 重启lotus进程：
+
+```
+nohup ./lotus daemon --server-api=http://10.10.19.17:3456 --bootstrap=false --api 11234 > lotus.log 2>&1 &
+```
+
+带上了server-api的地址。
+--bootstrap要设置为false，默认是true， --bootstrap设置为true表示为默认是连接公链的。
+
+
+lotus重启后，再连下创世节点的链，
+```
+./lotus net connect 创世节点的链
+```
+
+### （九）启动poster，
+nohup ./lotus-storage-miner run --mode=poster --server-api=http://10.10.19.17:3456 --dist-path=/mnt --nosync >> poster.log 2>&1 &
+
+
+### 启动 sealser
+ sealer,  force-remote-worker的步骤相同和 《搭建公链节点》相同
+
+### 查看出块
+
+```
+[fil@yangzhou010010019017 ~]$ ./lotus chain list
+16690: (Jun 18 19:35:13) [ bafy2bzacecroatuzs2yjrqds33soghiwpy2sdqu5c27wtiy4q4ehb274ynlwo: t01003,bafy2bzacecjakae6pvhmim75465x7xw3owg54ef2esxmgq3nq6ipes5f64iw4: t01000, ]
+16691: (Jun 18 19:35:15) [ bafy2bzacechajp3whsvw2n66qay6kjtmbg2ei45c4l7mc46dmtiemk6xaj5my: t01000,bafy2bzacecdf67lipa2hwjtuntpusud6ujm66kygerrqzn4kti3qlfajjotv6: t01003, ]
+16692: (Jun 18 19:35:17) [ bafy2bzacebogsy6i3vka63a4lmqsovrb3navfpofbrum4if3opx2n2pbyfb44: t01000,bafy2bzaceawdpalspqkbzxu2dox3hnvgcnghbp2zvdx77ky6urbrlaxkjjayy: t01003, ]
+16693: (Jun 18 19:35:19) [ bafy2bzacedpu36aeiauzcjfdhcniefdoakddeqihqvjiwic4s5jxw4rfagjyy: t01003,bafy2bzacebgqc3gayqam7qe6sgrtvbcmzhztsx2ksigwd2oscn75n3c3ezv42: t01000, ]
+16694: (Jun 18 19:35:21) [ bafy2bzacece7dydffrqyklakmr66owlexybcyj5mvndxaujwouipowk655jeo: t01000,bafy2bzaceartwblbsasu3fz4beybjezn3d2ljzjngnzgpsg7zwjs6hvwlbcxy: t01003, ]
+16695: (Jun 18 19:35:23) [ bafy2bzacec5siibq5caum2ymi54iocxch6j3nb2olay23myti2xsd3z7ecam2: t01000,bafy2bzacecy74tsbj7d5uufu6m432zlgs34yvc2lx4eegvockbz3326jbka7y: t01003, ]
+16696: (Jun 18 19:35:25) [ bafy2bzacedty2fklgfcqbdmdyhcqtnriq7fzucy42g3zjeyckbvio6ua3knks: t01003,bafy2bzacebnsvvbiv6ndqj34vtgyy4qrx5tkeus7p26rv3q5hdmbg27hgt2bm: t01000, ]
+16697: (Jun 18 19:35:27) [ bafy2bzacedembqhtpl4tachy7nrte5xrani734apgh6rqd72fx3w4f3ptnes2: t01003, ]
+16698: (Jun 18 19:35:29) [ bafy2bzacecximntoey2hxis4uj6sikpketlz5pvixaq6kpzymqdxmwsgdyufg: t01003, ]
+16699: (Jun 18 19:35:31) [ bafy2bzacebnojt2yyj5cgkkt5bj666ph7j6b7x7wt6oon5ecnm7y3o5co7n6u: t01000,bafy2bzacecvvbftq7ww6krei3wyzju6krs7csvpqyhe43juucgrtjkhod57ii: t01003, ]
+16700: (Jun 18 19:35:33) [ bafy2bzacea3kb3aoy47quzpxvjwlrbgomhw5b6erpzmubmqlxyf4kh5dcl3hy: t01003,bafy2bzacebctxuht4b2gwnfg64in4n27bw6eolwrzcjgishx2mtntrxpqv4am: t01000, ]
+16701: (Jun 18 19:35:35) [ bafy2bzaceas5fwu3ifvfl6r2yn6tiwjynirx7pfdlpwjejnlklhcdy5p74snq: t01000,bafy2bzacece2bnzcyezu4v3dwy6vfrdnsoxzb7qn6e3khwod25ksy7xzunwkc: t01003, ]
+16702: (Jun 18 19:35:37) [ bafy2bzacedlnxengglb4krdoffxtzm4acrc45yavvujbkqamkh5ret5ma2efq: t01003,bafy2bzacecvcddhaaqpl3bcrbhjsrv5ydzpisn5lsdm76gdb4oyashwqtzv2m: t01000, ]
+16703: (Jun 18 19:35:39) [ bafy2bzacedvw6oh3bn5zlwpyd32mg64xws35tg35fk6mqtw4ngebyie6d25v4: t01000,bafy2bzaceaa6apvdlqxai4qxmq2kzzcqvdlzgemkogbcgqhlnwg6duvn7svqm: t01003, ]
+```
+
+
+
+
+### 扇区列表
+
+```
+[fil@yangzhou010010019017 ~]$ ./lotus-storage-miner sectors list
+```
+
+
 
 
