--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -20,12 +20,6 @@ Ipfs@123ky
 #### 连接2
 Conn = "root:Ipfs@123ky@tcp(10.10.19.15:3306)/lotus17?loc=Local&parseTime=true"
 
-
-
-
-
-
-
 #### 测试数据库联通：
 ```
 [root@yangzhou010010019017 fil]# telnet 10.10.19.15 3306
@@ -34,4 +28,29 @@ Connected to 10.10.19.15.
 Escape character is '^]'.
 J
 5.7.30
+
+
+### 架构
+redis 用aws云服务商， 东京一个， 伦敦备用一个
+
+wallet filescan , 都用一个lotus
+mongodb, 数据导出来
+
+
+nginx 负载均衡， 9600 端口
+
+https://interopnet.filscan.io/#/
+
+https://filfox.io/
+
+
+https://stats.testnet.filecoin.io/d/3j4oi32ore0rfjos/chain-internal?orgId=1&refresh=45s
+
+
+aws forcepool 服务器监控
+http://monitor.filscan.cn:3000/login
+
+
+原力区作业平台
+http://paas.ipfsyuanli.com/login/?app_id=bk_job&c_url=http%3A%2F%2Fjob.ipfsyuanli.com%2F
 
