--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -28,9 +28,9 @@ Connected to 10.10.19.15.
 Escape character is '^]'.
 J
 5.7.30
+```
 
-
-### 架构
+架构
 redis 用aws云服务商， 东京一个， 伦敦备用一个
 
 wallet filescan , 都用一个lotus
@@ -53,4 +53,67 @@ http://monitor.filscan.cn:3000/login
 
 原力区作业平台
 http://paas.ipfsyuanli.com/login/?app_id=bk_job&c_url=http%3A%2F%2Fjob.ipfsyuanli.com%2F
+
+
+https://www.leangoo.com/kanban/board_list#/home/list#myBoard
+ligang@ipfsforce.com
+fsyxjsxw1
+
+
+https://forcepool.io/account?key=register
+18521721867
+Fsjsjsjx1
+
+
+http://jenkins.forceup.in/
+用户名：ligang
+密码：ipfsforce
+
+
+git push origin feature/codeservice
+
+开发组， 项目组
+
+基础服务， 
+fellcoin .  
+
+force sport 
+wallet 
+
+confluence
+http://192.168.1.172:8090/welcome.action
+ligang
+密： lyqx
+
+
+Backend zhenglun1$ git fetch origin
+LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
+Updating 4ee2147..1fc6361
+error: Your local changes to the following files would be overwritten by merge:
+	go.mokd
+Please commit your changes or stash them before you merge.
+Aborting
+LdeMacBook-Pro:UserBackend zhenglun1$ git checkout -f .
+Updated 1 path from the index
+LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
+Updating 4ee2147..1fc6361
+Fast-forwardco
+ api/types/request.go            |   4 +
+
+
+
+新浪邮箱：
+kylinkylin99abc
+fsjsjsjx1
+
+
+git push origin feature/codeservice
+
+
+## ssh 看后端服务
+root Zaq12wsX
+6月11日 11:52
+192.168.1.207
+
+
 
