--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -30,7 +30,7 @@ J
 5.7.30
 ```
 
-架构
+### 架构
 redis 用aws云服务商， 东京一个， 伦敦备用一个
 
 wallet filescan , 都用一个lotus
@@ -47,6 +47,7 @@ https://filfox.io/
 https://stats.testnet.filecoin.io/d/3j4oi32ore0rfjos/chain-internal?orgId=1&refresh=45s
 
 
+### 运维监控
 aws forcepool 服务器监控
 http://monitor.filscan.cn:3000/login
 
@@ -55,21 +56,33 @@ http://monitor.filscan.cn:3000/login
 http://paas.ipfsyuanli.com/login/?app_id=bk_job&c_url=http%3A%2F%2Fjob.ipfsyuanli.com%2F
 
 
+###  开发常用网站
+
+任务进展图：
 https://www.leangoo.com/kanban/board_list#/home/list#myBoard
 ligang@ipfsforce.com
 fsyxjsxw1
 
-
+forcepool外网：
 https://forcepool.io/account?key=register
 18521721867
 Fsjsjsjx1
 
-
+jekins编译和版本发布:
 http://jenkins.forceup.in/
 用户名：ligang
 密码：ipfsforce
 
+confluence 项目任务清单 和 开发文档分享：
+http://192.168.1.172:8090/welcome.action
+ligang
+lyqx
 
+新浪邮箱：
+kylinkylin99abc
+fsjsjsjx1
+
+### 代码提交
 git push origin feature/codeservice
 
 开发组， 项目组
@@ -79,12 +92,6 @@ fellcoin .
 
 force sport 
 wallet 
-
-confluence
-http://192.168.1.172:8090/welcome.action
-ligang
-密： lyqx
-
 
 Backend zhenglun1$ git fetch origin
 LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
@@ -101,19 +108,20 @@ Fast-forwardco
  api/types/request.go            |   4 +
 
 
-
-新浪邮箱：
-kylinkylin99abc
-fsjsjsjx1
-
-
 git push origin feature/codeservice
 
 
 ## ssh 看后端服务
-root Zaq12wsX
-6月11日 11:52
-192.168.1.207
+
+```
+ssh root@192.168.1.207
+密码： Zaq12wsX
+```
+
+查看log：
+/home/forcepool/backend-user/code/logs
+[root@shanghai192168001207 logs]# less forcepool-user.log
+
 
 
 
