--- a/区块链/搭建私有链普通节点.md
+++ b/区块链/搭建私有链普通节点.md
@@ -73,7 +73,7 @@ QmTd6UvR47vUidRNZ1ZKXHrAFhqTJAD27rKL9XYghEKgKX, [/ip4/147.75.67.199/tcp/4001]
 ### （七）storage miner 初始化
 一台主机， 或一个用户要运行poster或sealer, 就必须初始化。  
 
-初始化前需要将.lotusstorage 目录删除， 如果不是和lotus进程在同一台主机， 需要将lotus进程所在主机的.lotus/api, ./lotus/token覆盖掉本机同目录下文件。
+初始化前需要将.lotusstorage 目录删除， 如果不是和lotus进程在同一台主机， 需要将lotus进程所在主机的 __.lotus/api, ./lotus/token__ 覆盖掉本机同目录下文件。
 
 然后运行 
 ```
