--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -62,8 +62,14 @@ drwxr-xr-x   7 zhenglun1  staff   224B  6 21 15:59 unsealed
 
 ----
 
+#### Allowance 10240 below MinVerifiedDealSize. 错误排查
+```
 nohup ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false > lotus.log 2>&1 &
-没起来 ， lotus.log 末尾看到的错误
+```
+
+lotus 没起来 ， lotus.log 末尾看到的错误
+
+```
 2020-06-21T16:40:55.322+0800	WARN	main	lotus/main.go:81	initializing node:
     main.glob..func2
         /Users/zhenglun1/goworkspace/lotus/lotus/cmd/lotus/daemon.go:231
@@ -71,7 +77,7 @@ nohup ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.js
     github.com/filecoin-project/lotus/node.New
         /Users/zhenglun1/goworkspace/lotus/lotus/node/builder.go:492
   - could not build arguments for function "github.com/filecoin-project/lotus/node/modules/lp2p".StartListening.func1 (/Users/zhenglun1/goworkspace/lotus/lotus/node/modules/lp2p/addrs.go:98): failed to build host.Host: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build lp2p.BaseIpfsRouting: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build dtypes.NetworkName: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build dtypes.AfterGenesisSet: function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12) returned a non-nil error: genesis func failed: make genesis block: failed to verify presealed data: failed to add verified client: doExec apply message failed: Allowance 10240 below MinVerifiedDealSize for add verified client t3tahdt24chfchkzgk7mmhtakfc2mvilifdluru4rvc7cg7kbwgtcw5kxqjq42ydnxo3xnrgebsmrfkxuiun7q (RetCode=16)
-  - 
+```
 
 #### import 创世节点的key
 ➜  lotustest ./lotus wallet import ~/.genesis-sectors/pre-seal-t01000.key
