--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -1,5 +1,9 @@
-### 标准步骤：
-准备工作：上传lotus、lotus-storage-miner、lotus-seed版本。
+## 标准步骤：
+#### 1. 准备工作：
+上传lotus、lotus-storage-miner、lotus-seed版本。
+删除.lotus .lotusmessage, .genesis-sectors目录
+
+#### 2. 按序完成10个步骤
 ```
 1.   ./lotus fetch-params --proving-params 536870912
 2.   ./lotus-seed pre-seal --sector-size  536870912  --num-sectors 5
@@ -12,18 +16,17 @@
 9.    ./lotus-storage-miner fconfig autogarbage false
 10.   ./lotus wallet set-default  t3地址
 ```
-
-###  获取证明参数文件
-mac 上的实验数据：
-
+## mac 上的实验数据：
+####  1. 获取证明参数文件
+```
 ./lotus fetch-params --proving-params 2048
 
 du -sch /var/tmp/filecoin-proof-parameters/
 1.1G	/var/tmp/filecoin-proof-parameters/
 1.1G	total
+```
 
-
-#### seed pre-seal 
+#### 2.  seed pre-seal 
 ```
 ➜  lotustest ./lotus-seed pre-seal --sector-size 2048  --num-sectors 5
 sector-id: {1000 0}, piece info: {2048 bafk4chzaikpr46qbf6tdjufoozqrejzsqkk66i7stavvrx5oktgt2wskx45a}
@@ -40,7 +43,8 @@ sector-id: {1000 4}, piece info: {2048 bafk4chzam6iqpjl6l62ol4grofo2dt5sc3svtoig
 2020-06-21T15:59:46.082+0800	INFO	preseal	seed/seed.go:179	Writing preseal manifest to /Users/zhenglun1/.genesis-sectors/pre-seal-t01000.json
 ```
 
-#### 生成.genesis-sectors目录
+#### 3. 生成.genesis-sectors目录
+```
 ./lotus-seed genesis new localnet.json
 在用户跟目录下生成 .genesis-sectors 目录 
 ➜  lotustest ll -a ~/.genesis-sectors
@@ -53,16 +57,16 @@ drwxr-xr-x   7 zhenglun1  staff   224B  6 21 15:59 cache
 drwxr-xr-x   7 zhenglun1  staff   224B  6 21 15:59 sealed
 -rw-r--r--   1 zhenglun1  staff   106B  6 21 15:59 sectorstore.json
 drwxr-xr-x   7 zhenglun1  staff   224B  6 21 15:59 unsealed
-
-#### 创建创世节点矿工
+```
+#### 4. 创建创世节点矿工
+```
 ➜  lotustest ./lotus-seed genesis add-miner localnet.json ~/.genesis-sectors/pre-seal-t01000.json
 2020-06-21T16:04:38.653+0800	INFO	lotus-seed	lotus-seed/genesis.go:107	Adding miner t01000 to genesis template
 2020-06-21T16:04:38.653+0800	INFO	lotus-seed	lotus-seed/genesis.go:124	Giving t3u6gvbw35viq3q66tfxyc6nh3igs74trvxmfai2bs275ka7lcvlt5cbisugaew3exd72avgtlkaaxmfqdy3ua some initial balance
+```
 
-
-----
-
-#### Allowance 10240 below MinVerifiedDealSize. 错误排查
+#### 5. 运行 lotus daemon
+#####  1. Allowance 10240 below MinVerifiedDealSize. 错误排查
 ```
 nohup ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false > lotus.log 2>&1 &
 ```
@@ -76,19 +80,34 @@ lotus 没起来 ， lotus.log 末尾看到的错误
   - starting node:
     github.com/filecoin-project/lotus/node.New
         /Users/zhenglun1/goworkspace/lotus/lotus/node/builder.go:492
-  - could not build arguments for function "github.com/filecoin-project/lotus/node/modules/lp2p".StartListening.func1 (/Users/zhenglun1/goworkspace/lotus/lotus/node/modules/lp2p/addrs.go:98): failed to build host.Host: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build lp2p.BaseIpfsRouting: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build dtypes.NetworkName: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): failed to build dtypes.AfterGenesisSet: function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12) returned a non-nil error: genesis func failed: make genesis block: failed to verify presealed data: failed to add verified client: doExec apply message failed: Allowance 10240 below MinVerifiedDealSize for add verified client t3tahdt24chfchkzgk7mmhtakfc2mvilifdluru4rvc7cg7kbwgtcw5kxqjq42ydnxo3xnrgebsmrfkxuiun7q (RetCode=16)
+  - could not build arguments for function "github.com/filecoin-project/lotus/node/modules/lp2p".StartListening.func1 (/Users/zhenglun1/goworkspace/lotus/lotus/node/modules/lp2p/addrs.go:98): failed to build host.Host: 
+
+could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): 
+
+failed to build lp2p.BaseIpfsRouting: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): 
+
+failed to build dtypes.NetworkName: could not build arguments for function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12): 
+
+failed to build dtypes.AfterGenesisSet: function "reflect".makeFuncStub (/Users/zhenglun1/goroot/go/src/reflect/asm_amd64.s:12) returned a non-nil error: 
+
+genesis func failed: make genesis block: failed to verify presealed data: failed to add verified client: 
+
+doExec apply message failed: Allowance 10240 below MinVerifiedDealSize for add verified client t3tahdt24chfchkzgk7mmhtakfc2mvilifdluru4rvc7cg7kbwgtcw5kxqjq42ydnxo3xnrgebsmrfkxuiun7q (RetCode=16)
 ```
 
 #### import 创世节点的key
+
+```
 ➜  lotustest ./lotus wallet import ~/.genesis-sectors/pre-seal-t01000.key
 imported key t3u6gvbw35viq3q66tfxyc6nh3igs74trvxmfai2bs275ka7lcvlt5cbisugaew3exd72avgtlkaaxmfqdy3ua successfully!
+```
+
 ### add miner 命令输出： 
 ```
 [fil@yangzhou010010019019 ~]$ ./lotus-seed genesis add-miner localnet.json ~/.genesis-sectors/pre-seal-t01000.json
 2020-06-17T16:20:00.607+0800	INFO	lotus-seed	Adding miner t01000 to genesis template
 2020-06-17T16:20:00.607+0800	INFO	lotus-seed	Giving t3vg5iq2gtiuswn45kny5wkiiqueac57yizoqhy4bwcowdkp3nhr43tbodkginxmlcod2abos3vzlzsmtb632a some initial balance
 ```
-
 
 ### 解决wallet import时的 connect: connection refused 问题
 
@@ -143,9 +162,7 @@ nameserver 114.114.114.114
 [fil@yangzhou010010019019 ~]$ ps -ef | grep lotus
 fil       5181  5108  4 10:23 pts/2    00:00:00 ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false
 fil       5290  5108  0 10:23 pts/2    00:00:00 grep --color=auto lotus
-
 ```
-
 
 
 ### 导入key
