--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -31,20 +31,44 @@ J
 ```
 
 ### 架构
+
+####  lotus部署
+扬州 两个512M的集群 和 一个官方集群 ，  目前GPU只有一个， 运算poster会有压力， poster风险比较大
+
+宁波 32G 集群 
+
+30万 sector 测试， 和1P+ power test
+
+
+
+#### ssh 看后端服务
+
+查看userbackend log：
+
+```
+ssh root@192.168.1.207
+密码： Zaq12wsX
+cd /home/forcepool/backend-user/code/logs
+[root@shanghai192168001207 logs]# less forcepool-user.log
+
+```
+
+
+#### 后端服务部署
 redis 用aws云服务商， 东京一个， 伦敦备用一个
 
 wallet filescan , 都用一个lotus
 mongodb, 数据导出来
 
-
 nginx 负载均衡， 9600 端口
 
+
+#### lotus 查看高度和算力等的网站
 https://interopnet.filscan.io/#/
 
 https://filfox.io/
 
 https://stats.testnet.filecoin.io/d/3j4oi32ore0rfjos/chain-internal?orgId=1&refresh=45s
-
 
 开发组， 项目组
 
@@ -53,7 +77,6 @@ fellcoin .
 
 force sport 
 wallet 
-
 
 ### 运维监控
 aws forcepool 服务器监控
@@ -97,35 +120,21 @@ fsjsjsjx1
 ```
 git push origin feature/codeservice
 
-Backend zhenglun1$ git fetch origin
+$ git fetch origin
 LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
 Updating 4ee2147..1fc6361
 error: Your local changes to the following files would be overwritten by merge:
 	go.mokd
 Please commit your changes or stash them before you merge.
 Aborting
+
 LdeMacBook-Pro:UserBackend zhenglun1$ git checkout -f .
 Updated 1 path from the index
+
 LdeMacBook-Pro:UserBackend zhenglun1$ git merge origin/test
 Updating 4ee2147..1fc6361
 Fast-forwardco
  api/types/request.go            |   4 +
 
-
 git push origin feature/codeservice
 ```
-
-## ssh 看后端服务
-
-```
-ssh root@192.168.1.207
-密码： Zaq12wsX
-```
-
-查看log：
-/home/forcepool/backend-user/code/logs
-[root@shanghai192168001207 logs]# less forcepool-user.log
-
-
-
-
