--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -1,7 +1,7 @@
 ## 标准步骤：
 #### 1. 准备工作：
 上传lotus、lotus-storage-miner、lotus-seed版本。
-删除.lotus .lotusmessage, .genesis-sectors目录
+删除.lotus,  localnet.json,  .genesis-sectors目录
 
 #### 2. 按序完成10个步骤
 ```
