--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -1,3 +1,29 @@
+### 新部署地址
+
+
+➜  ~ ssh -p 54073 root@103.78.229.68
+Last login: Mon Jun 22 16:01:48 2020 from 58.33.12.250
+
+
+
+[root@jumpserver01-yz zhenglun]# scp -rpP 62534 lotus* 10.10.11.39:/home/fil
+
+
+[root@jumpserver01-yz ~]# ssh -p 62534 10.10.11.39
+
+### 不同主机之间文件拷贝
+```
+[root@yangzhou010010001015 20200612]# scp -rpP 62534 * 10.10.19.17:/home/fil
+```
+
+mac 开发本的文件 拷贝到 跳板机
+```
+$ scp -rpP 62534 -i ~/.ssh/id_rsa lotus root@222.189.237.2:/home/ligang/
+
+$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus root@103.78.229.68:/home/ligang/
+
+```
+
 ### 跳板机
 跳板机地址，
 ssh -p 62534 root@222.189.237.2
