--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -65,6 +65,57 @@ J
 
 30万 sector 测试， 和1P+ power test
 
+#### 数据检索 
+
+随机抽取一个高度， 得到一个sector,  假如抽取的高度中， 其中有个高度是我们的， 
+
+数据丢失了，  一个sector就32G， 惩罚一次， 算力 就会降下去了，
+
+算力。就降下去了， 如果一次打呗， 
+
+随机抽取三个高度， 惩罚的规则， 
+
+当天就要吧数据就找出来， 在下一个周期， 必须传上去， 恢复上去， 
+
+在做一个验证， 如果验证是被，就永久失效， 
+
+数据存到不通的地方， 
+
+官方的lotus
+
+自己开发的lotus,  
+
+lotus 
+
+数据上链， lotus 完成上链， 
+#### sealer 
+
+api  和token给 sealer
+32G参数控制， 分发多少个任务， 具体多少个任务要根据做服务器的配置。 
+32G的区块， 需要内存70多G，  
+目前服务器的配置， 48核，  128 G内存， 
+ 
+最大32G， 
+分发
+poster用gpu，     
+100个机会，要挂载到poster
+
+#### 存储架构
+force客户端，   plarm服务端， 和存储服务起对应， 
+force.conf
+
+每个存储节点跑plarm 
+取代poster挂载
+
+forcefs 
+
+sealer只要知道存储在那 
+
+copytask 
+
+pc 阶段的日志， 
+
+group 
 
 
 #### ssh 看后端服务
