--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -3,13 +3,33 @@
 
 ➜  ~ ssh -p 54073 root@103.78.229.68
 Last login: Mon Jun 22 16:01:48 2020 from 58.33.12.250
+[root@jumpserver01-yz ~]# ssh -p 62534 10.10.11.39
 
+➜  ~ ssh -p 54073 root@103.78.229.68
+远程考到本地
+scp -rpP 62534 10.10.12.51:/home/fil/ ./
 
-
+本地考到远程
 [root@jumpserver01-yz zhenglun]# scp -rpP 62534 lotus* 10.10.11.39:/home/fil
 
 
-[root@jumpserver01-yz ~]# ssh -p 62534 10.10.11.39
+创世节点地址： 10.10.12.51， 
+
+创世节点是8M， 普通节点可以是512. 
+
+#### deadline
+sector 到哪个deadline . 
+
+做的deadline , 是随机的， 
+
+新作的， 下一个周期才知道deadline
+
+那个时间
+手动创造， 上报就没了， 上报一个就没了， 自动有这么
+
+windowpost完成时间， 32G 40分钟就够了
+
+
 
 ### 不同主机之间文件拷贝
 ```
@@ -23,6 +43,16 @@ $ scp -rpP 62534 -i ~/.ssh/id_rsa lotus root@222.189.237.2:/home/ligang/
 $ scp -rpP 54073 -i ~/.ssh/id_rsa lotus root@103.78.229.68:/home/ligang/
 
 ```
+
+mac 开发本的文件 拷贝到 跳板机
+```
+$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus-server root@103.78.229.68:/home/zhenglun/
+```
+
+
+
+对标
+边缘覆盖
 
 ### 跳板机
 跳板机地址，
