--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -17,6 +17,8 @@ scp -rpP 62534 10.10.12.51:/home/fil/ ./
 
 创世节点是8M， 普通节点可以是512. 
 
+一天300T， 需要多少台机器
+展现实力的时候
 #### deadline
 sector 到哪个deadline . 
 
