--- a/区块链/搭建公链节点.md
+++ b/区块链/搭建公链节点.md
@@ -1,3 +1,5 @@
+
+
 需要的文件如下：
 ```
 [fil@yangzhou010010019017 ~]$ ll
@@ -307,6 +309,11 @@ TRUST_PARAMS=1 ./lotus-storage-miner init --owner=t02599 --nosync  --sector-size
 ``` 
 
 #### 4. root用户下启动sealer
+
+
+FORCE_BUILDER_P1_WORKERS=28   FORCE_BUILDER_TASK_DELAY=1s  FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=1  TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1  FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=56 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.11.31:3456 --dist-path=/mnt  --nosync  --groups=1 >> /root/log/sealer.log 2>&1 &
+
+
 
 ```
 FORCE_BUILDER_P1_WORKERS=1 FORCE_BUILDER_TASK_DELAY=25m TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1 FORCE_BUILDER_TASK_TOTAL_NUM=2 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.19.17:3456 --dist-path=/mnt --nosync --groups=1 > sealer.log 2>&1
