--- a/区块链/服务地址汇总.md
+++ b/区块链/服务地址汇总.md
@@ -1,6 +1,43 @@
-### 新部署地址
+mac 开发本的文件 拷贝到 跳板机
+```
+$ scp -rpP 62534 -i ~/.ssh/id_rsa lotus root@222.189.237.2:/home/ligang/
+
+$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus root@103.78.229.68:/home/ligang/
+
+```
+
+mac 开发本的文件 拷贝到 跳板机
+```
+$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus-server root@103.78.229.68:/home/zhenglun/
+```
 
 
+### 不同主机之间文件拷贝
+```
+[root@yangzhou010010001015 20200612]# scp -rpP 62534 * 10.10.19.17:/home/fil
+```
+
+mac 开发本的文件 拷贝到 跳板机
+```
+$ scp -rpP 62534 -i ~/.ssh/id_rsa lotus root@222.189.237.2:/home/ligang/
+```
+
+#### 排查链不能同步的问题
+lotus chain list 停止了很长时间不动，一是整个链不动了， 一是自己没有链到了高度比较高的节点， 
+
+如果已经链了很多节点， 找到创世节点的链， 
+
+公网上， 不是每个节点都有出块权，算力要大于一个限定值，才有出块权，一般叫做算力出线。 因为出块是在poster里完成的， poster.log里有尝试出块的log， 搜索base height 关键字， 
+
+私有网没个限制， 任何有算力的节点都可以尝试出现。 最后确认这个版本的lotus存在bug, 导致链不能增长。 
+
+
+
+
+
+
+
+```
 ➜  ~ ssh -p 54073 root@103.78.229.68
 Last login: Mon Jun 22 16:01:48 2020 from 58.33.12.250
 [root@jumpserver01-yz ~]# ssh -p 62534 10.10.11.39
@@ -9,16 +46,126 @@ Last login: Mon Jun 22 16:01:48 2020 from 58.33.12.250
 远程考到本地
 scp -rpP 62534 10.10.12.51:/home/fil/ ./
 
+```
+
+##### 
+
 本地考到远程
 [root@jumpserver01-yz zhenglun]# scp -rpP 62534 lotus* 10.10.11.39:/home/fil
 
 
 创世节点地址： 10.10.12.51， 
-
 创世节点是8M， 普通节点可以是512. 
 
 一天300T， 需要多少台机器
 展现实力的时候
+
+
+### 测试用例
+
+post 连接到低的高度的链， 会影响出块率， 
+每次去查高度, 
+99%的精力，解决1%的问题
+
+如果分叉， 更麻烦
+lotus给lout-server上报，  加入高度， lotus 找出其中一个，返回给poster
+
+#### 用例： 解决lotus重启问题
+##### 1.  vip方式
+假如lotus , 坏了， 两台, A和B vip飘到了B
+vip票过，但tcp链接有问题， tcp是假链接， 只有重启，所以还要重启
+
+重连后， ip地址可以不变， 包括.lotus不变， 
+要么运维重启， 要么程序信号量， 即软重启， 
+
+##### 2. nginx方式
+vip pk nginx
+nginx 部署多个lotus,  可以重链
+
+health-check, 谁发生了发生， 去三个链的高度， 判读有没有分叉 
+
+准备好两个节点， 
+
+不走nginx, ip就可能变。 tcp链接， 
+
+防火墙贵的原因 ：
+就解决session, 同步， 在客户端没有感觉下， 把链接建立到另一个链接。 
+
+vip 两个陪跑。
+
+##### 3. lotus-server方式
+lotus-server发信号量， 而故障是被动的 
+message 对sealer无感的， 用到的时候重链， 最终目的， 在非常短的时间 重链。 
+
+
+lotus-server 负载均衡， lotus-server运行在k8s里
+nginx , 模拟发送大量的请求， 看lotus-sever成熟的压力怎么样，兵法写数据
+
+kill 掉任何lotus-server
+
+---
+延迟高的问题影响。  
+
+---
+#### 用例： lotus-message 多个节点操作数据库， 大批量请求， 有没有锁表， 
+成功率
+
+--- 
+#### 用例： nonce 偏小的问题， 
+分叉之后，链上比本地的nonce低， 
+缺失的nonce重新广播一遍
+
+转完帐， 再转一次帐 
+
+nonce 
+
+消息的院子性由数据库保证
+
+产生的消息没发到链上， 
+---
+#### 模拟坏盘的情况
+
+目前能预测的问题， 
+
+一个sealer， 有20个任务， 不断领新的任务， 其他的force-remotework就会先在那里。 
+
+任务的总量的控制， 直接领新的任务， 不段消耗任务的总量。 
+
+每个P的时间， 也要统计。 
+
+force worker任务的成功率， 不能低于
+
+百万fil的时候
+
+
+---
+#### 用例： 模拟force 因网络问题上报不了任务的问题， 网络原因， 上报一次， 
+
+-------
+sealer
+一个任务很久了， 是不是要告警
+领了一个很久了
+
+---
+
+sealer lotus 丢包时， 要重发一次。 
+
+---
+sector id损坏的时候，   接下来做windowpost,   
+主动上报损坏， 
+
+---
+容错的用列
+
+---
+10个p1 ， 一个p挂掉了， 整个组都会出问题， 整个组都会停掉， 自己出了问题， 
+任务失败了， 任务总量会一直下降， 不一定磁盘导致的
+被节点反复领， 状态为2，  
+
+
+在线编辑
+
+
 #### deadline
 sector 到哪个deadline . 
 
@@ -38,18 +185,7 @@ windowpost完成时间， 32G 40分钟就够了
 [root@yangzhou010010001015 20200612]# scp -rpP 62534 * 10.10.19.17:/home/fil
 ```
 
-mac 开发本的文件 拷贝到 跳板机
-```
-$ scp -rpP 62534 -i ~/.ssh/id_rsa lotus root@222.189.237.2:/home/ligang/
 
-$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus root@103.78.229.68:/home/ligang/
-
-```
-
-mac 开发本的文件 拷贝到 跳板机
-```
-$ scp -rpP 54073 -i ~/.ssh/id_rsa lotus-server root@103.78.229.68:/home/zhenglun/
-```
 
 
 
