--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -1,7 +1,7 @@
 ## 标准步骤：
-#### 1. 准备工作：
-上传lotus、lotus-storage-miner、lotus-seed版本。
+#### 1. 重要的前置条件的准备工作：
 删除.lotus,  localnet.json,  .genesis-sectors目录
+上传lotus、lotus-storage-miner、lotus-seed版本。
 
 #### 2. 按序完成10个步骤
 ```
@@ -28,6 +28,7 @@ du -sch /var/tmp/filecoin-proof-parameters/
 ```
 
 #### 2.  seed pre-seal 
+pre-seal 成功的正常log: 
 ```
 ➜  lotustest ./lotus-seed pre-seal --sector-size 2048  --num-sectors 5
 sector-id: {1000 0}, piece info: {2048 bafk4chzaikpr46qbf6tdjufoozqrejzsqkk66i7stavvrx5oktgt2wskx45a}
@@ -44,7 +45,7 @@ sector-id: {1000 4}, piece info: {2048 bafk4chzam6iqpjl6l62ol4grofo2dt5sc3svtoig
 2020-06-21T15:59:46.082+0800	INFO	preseal	seed/seed.go:179	Writing preseal manifest to /Users/zhenglun1/.genesis-sectors/pre-seal-t01000.json
 ```
 
-#### 3. 生成.genesis-sectors目录
+#### 3. genesis new 生成.genesis-sectors目录
 ```
 ./lotus-seed genesis new localnet.json
 在用户跟目录下生成 .genesis-sectors 目录 
