--- a/区块链/部署.md
+++ b/区块链/部署.md
@@ -15,6 +15,23 @@
 10.10.11.40
 10.10.10.21
 
+我目前使用的资源情况：
+跳板机： root@103.78.229.68  端口54073
+节点主机和在上面的运行程序
+10.10.11.30   512M私有链创世节点
+10.10.11.31  运行lotus, lotus-server, poster
+10.10.11.32  运行sealer
+10.10.11.33  运行P2 P3
+10.10.11.34  运行P2 P3
+10.10.11.35  运行P2 P3
+10.10.11.36  运行P2 P3
+10.10.11.37  运行P4
+10.10.11.38  运行P4
+10.10.11.39  运行P4
+10.10.11.40  运行P4
+10.10.10.21。 运行P1 PC
+
+
 #### 部署
 11.30节点 做私链创世节点
 11.31节点跑 lotus，server， poster。 
