--- a/区块链/存储服务器.md
+++ b/区块链/存储服务器.md
@@ -26,10 +26,14 @@ Filesystem                Size  Used Avail Use% Mounted on
 10.10.11.21:/mnt/storage  160T   33G  152T   1% /mnt
 ```
 
+若/mnt没有挂载文件系统, 用下面命令挂载上文件系统：
+```
+mount -t nfs -o hard,nolock,rw,user,rsize=1048576,wsize=1048576,vers=3 10.10.11.21:/mnt/storage  /mnt/
+```
+
 用mount可以看到挂载的文件系统10.10.11.21:/mnt/storage的详细情况： 
 ```
 # mount
-...
 10.10.11.21:/mnt/storage on /mnt type nfs (rw,nosuid,nodev,noexec,relatime,vers=3,rsize=1048576,wsize=1048576,namlen=255,hard,nolock,proto=tcp,timeo=600,retrans=2,sec=sys,mountaddr=10.10.11.21,mountvers=3,mountport=20048,mountproto=udp,local_lock=all,addr=10.10.11.21,user)
 ```
 
