--- a/区块链/搭建私有链普通节点.md
+++ b/区块链/搭建私有链普通节点.md
@@ -1,4 +1,60 @@
+
 若无说明， 表示都是在普通节点主机上操作
+
+
+storage_nodes      
+
+```
+1	10.10.11.20	1	10.10.11.20	nfs 
+storage_nodes 存放的mnt的地址， 这个最后拼接成sealer的地址：
+[fil@yangzhou010010010239 nfs]$ df -h
+Filesystem                Size  Used Avail Use% Mounted on
+/dev/sda4                 1.1T  511G  602G  46% /
+devtmpfs                   63G     0   63G   0% /dev
+tmpfs                      63G     0   63G   0% /dev/shm
+tmpfs                      63G  138M   63G   1% /run
+tmpfs                      63G     0   63G   0% /sys/fs/cgroup
+/dev/sda2                 3.9G  112M  3.5G   4% /boot
+/dev/sda3                 128M  4.0K  128M   1% /boot/efi
+tmpfs                      13G     0   13G   0% /run/user/0
+10.10.11.20:/mnt/storage  160T     0  152T   0% /mnt
+10.10.10.20:/sealer        58T  481G   55T   1% /sealer
+[fil@yangzhou010010010239 nfs]$ ll
+total 4
+drwxrwxr-x. 4 fil fil 4096 Jun 29 21:43 10.10.11.20
+[fil@yangzhou010010010239 nfs]$ pwd
+/sealer/nfs
+
+
+[fil@yangzhou010010011030 ~]$ ./lotus-storage-miner fconfig show
+	The current propagation delay before generate block (propagation): 6s
+	The current early submit time for block propagation (earlysubmit): 800ms
+	The current maximum write speed to storage server (maxwritespeed): 50 MBps
+	The current automatic pledge-sector repeatly setting (autogarbage): true
+	The current automatic pledge-sector repeatly setting (checknull): false
+	The current automatic pledge-sector repeatly setting (calccandidatetime): 6000
+[fil@yangzhou010010011030 ~]$ ./lotus-storage-miner info
+Mode: sealer
+Miner: t01000
+Sector Size: 8 MiB
+Byte Power:   40 MiB / 40 MiB (100.0000%)
+Actual Power: 400 Mi / 400 Mi (100.0000%)
+	Committed: 40 MiB
+	Proving: 40 MiB
+Expected block win rate: 3456.0000/day (every 25s)
+
+Miner Balance: 221.344690667389486693
+	PreCommit:   0
+	Locked:      221.344690667389486693
+	Available:   0
+Worker Balance: 49989500
+Market (Escrow):  0
+Market (Locked):  0
+	Total: 5
+	Proving: 5
+	```
+	
+	
 
 ### （一）在跳板机上将创世节点主机上的dev.gen拷贝到普通节点主机用户根目录下
 先将创世节点主机上的dev.gen 拷贝到跳板机
