--- a/区块链/问题排查1.md
+++ b/区块链/问题排查1.md
@@ -1,3 +1,16 @@
+#### 创世节点 8M 算力太低， 很长时间才能出块，
+创世节点算力太低 查询长时间不动：
+```
+362: (Jun 30 16:51:10) [ bafy2bzacedfu77xs7gqoitfngk3pt6o3ezizytlzasvxkivftx3jcjotocpuw: t01000, ]
+367: (Jun 30 16:53:15) [ bafy2bzacebx2bmmyo2yi6npr7j32c5hwa46f6nb46sfbezyyctwozzlcif3iq: t01000, ]
+370: (Jun 30 16:54:30) [ bafy2bzacedab3xhuaedersw2wnvu4tyyqagpdzva6z4a6smzuhbzzl3eti7pw: t01000, ]
+377: (Jun 30 16:57:25) [ bafy2bzacedhfs6tyrfbxmmci55cgdzbbgwyryfqz4evn7xrvvq5vfqvkxbvbk: t01000, ]
+406: (Jun 30 17:09:30) [ bafy2bzaceao3fmoaodu6ggbojm4ll7rpdkohol6d3mzteej6trl42ejh4fei2: t01000, ]
+411: (Jun 30 17:11:35) [ bafy2bzacecjbnhpjdo3j35rnciapkrndxifvnwyaxix5pgs2v7rfdgj66xure: t01000, ]
+```
+
+sync wait 看到结果是空的
+
 
 ### sector 长期处于commiting状态
 
