--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -1,19 +1,70 @@
-#### 设置项
+### 配置文件
 
+commting: p4消息已经发出，等待链上消息反馈， 就是proving了。 
+ 
+commitnng正常持续时间 
+server:
+```
+[fil@yangzhou010010019017 ~]$ cat config.json
+{
+  "port": "3456",
+  "dbConfig": {
+    "dbConnString": "root:Ipfs@123ky@tcp(10.10.19.15:3306)/lotus17?loc=Local&parseTime=true",
+    "dbType": "mysql",
+    "dbDebugMode": true
+  },
+  "sealerSleepDurationSeconds":60,
+  "lockLifeCircleMinutes": 40,
+  "sectorStoreZoneMap": {
+    "2048": 3078,
+    "8388608": 12582912,
+    "34359738368": 51539607552,
+    "536870912": 805306368
+  }
+}
+```
+
+worker:
+```
+$ cat config.toml
+scheduler_url = "http://10.10.19.17:3456"
+local_dir = "/sealer"
+copy_limit_mb_per_sec = 500
+group_id= [1]
+sector_size = 536870912
+ip = "10.10.19.17"
+
+[[worker]]
+num = 1
+supported_phase = ["PreCommitPhase1","PreCommitPhase2","CommitPhase1","CommitPhase2"]
+wait_sec = 60
+
+[[worker]]
+num = 1
+supported_phase = ["CopyTask","CleanTask"]
+wait_sec = 60
+
+```
+
+
+### 设置项
 forcework 设置项： 
 512M的FIL_PROOFS_MAXIMIZE_CACHING=false
 32G的FIL_PROOFS_MAXIMIZE_CACHING为 1 或者 true
-
 
 单位：
 8M=8388608
 512M=536870912
 32G=34359738368
-
-#### 创世节点按序完成10个步骤
+34359738368
+### 创世节点
 ```
-./lotus fetch-params  8388608
+./lotus fetch-params  34359738368
+./lotus-seed pre-seal --sector-size  34359738368  --num-sectors 5
+新：
 ./lotus-seed pre-seal --sector-size  8388608  --num-sectors 5
+
+
 ./lotus-seed genesis new localnet.json
 ./lotus-seed genesis add-miner localnet.json ~/.genesis-sectors/pre-seal-t01000.json
 nohup ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false > lotus.log 2>&1 &
@@ -24,49 +75,58 @@ nohup ./lotus-storage-miner run --nosync >miner.log 2>&1 &
 ./lotus wallet set-default  t3地址
 ```
 
-#### 私链普通节点
+### 私链搭建
 
+#### lotus 搭建
 ```
+第一次启动lotus
 nohup ./lotus daemon --genesis=./dev.gen --bootstrap=false --api 11234 > lotus.log 2>&1 & 
+```
 
-第二次启动
-nohup ./lotus daemon --server-api=http://10.10.11.31:3456 --bootstrap=false --api 11234 > lotus.log 2>&1 &
-
-nohup ./lotus-server >lotus-server.log 2>&1 &
-
-nohup ./lotus-storage-miner run --mode=poster --server-api=http://10.10.11.31:3456 --dist-path=/mnt --nosync >> poster.log 2>&1 &
-
+#### miner 初始化
+```
 ./lotus wallet new bls
 
-./lotus-storage-miner init --nosync --sector-size=34359738368 --owner=t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma
+owner 是t3的初始化, 耗时5分钟
+./lotus-storage-miner init --nosync --sector-size=536870912 --owner=t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma
 
-nohup ./lotus-storage-miner run --mode=poster --server-api=http://10.10.10.239:3456 --dist-path=/mnt --nosync > poster.log 2>&1 &
-
-
-带t0的初始化  这个步骤是非常快的
-./lotus-storage-miner init  --nosync --owner=t01002
-
-
-针对worker耗时不同而用的sealer不同启动方式
-FORCE_BUILDER_P1_WORKERS=28 FORCE_BUILDER_TASK_DELAY=1s FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=1 TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1 FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=56 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.11.31:3456 --dist-path=/mnt --nosync --groups=1 > ./sealer.log 2>&1 &
-
-
+ownee是t0的初始化  这个步骤是非常快的
 ./lotus-storage-miner init  --nosync --owner=t01002
 ```
 
+#### server 
+
+```
+nohup ./lotus-server >lotus-server.log 2>&1 &
+第二次启动lotus
+nohup ./lotus daemon --server-api=http://10.10.10.207:3456 --bootstrap=false --api 11234 > lotus.log 2>&1 &
+```
+
+#### poster 
+```
+nohup ./lotus-storage-miner run --mode=poster --server-api=http://10.10.10.207:3456 --dist-path=/mnt --nosync > poster.log 2>&1 &
+```
+
+针对worker耗时不同而用的sealer不同启动方式
 32G的sealer和worker
 ```
 HACK_P1=1   FIL_PROOFS_MAXIMIZE_CACHING=1  FIL_PROOFS_NUMS_OF_PARTITION_HACK=4  FIL_PROOFS_USE_FULL_GROTH_PARAMS=true  BELLMAN_PROOF_THREADS=8  RUST_LOG=debug  RUST_BACKTRACE=full   nohup ./force-remote-worker >> logs/force-remote-worker.log 2>&1 &
 FORCE_BUILDER_P1_WORKERS=1  FORCE_BUILDER_TASK_DELAY=1h  FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=10  TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1  FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=1 nohup ./lotus-storage-miner run     --mode=remote-sealer --server-api=http://10.10.10.239:3456 --dist-path=/mnt  --nosync   --groups=1 > logs/sealer.log 2>&1 &
 ```
 
-### 同步命令
-
-#### ansible
-
-例子：
+512M的sealer和worker
 ```
- ansible-playbook -i hosts-storage-6-22 test.yml -f 30
+FIL_PROOFS_MAXIMIZE_CACHING=false FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=debug BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &
+FORCE_BUILDER_P1_WORKERS=28 FORCE_BUILDER_TASK_DELAY=1s FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=1 TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1 FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=56 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.10.207:3456 --dist-path=/mnt --nosync --groups=1 > ./sealer.log 2>&1 &
+```
+
+sealer/目录下的 cache 是p1产生的
+sealer/目录下的 seal是p2产生的
+
+### 同步命令
+#### ansible
+```
+ansible-playbook -i hosts-storage-6-22 test.yml -f 30
 
 ansible-playbook -i hosts-storage-6-22 03storage_node_init.yml --step
 
@@ -83,6 +143,12 @@ ansible ligang -m copy -a "src=/home/cmd/config.toml dest=/home/fil/ owner=fil g
 ```
 # vi /etc/ansible/hosts
 ```
+
+#### scp
+### 数据库
+mysql -uroot -pIpfs@123ky
+mysql> create database `lotus17a` ；
+mysql> exit 
 
 ### linux基本命令：
 
