--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -1,11 +1,8 @@
 ### 配置文件
 
-commting: p4消息已经发出，等待链上消息反馈， 就是proving了。 
- 
-commitnng正常持续时间 
-server:
+#### server 的配置
 ```
-[fil@yangzhou010010019017 ~]$ cat config.json
+$ cat config.json
 {
   "port": "3456",
   "dbConfig": {
@@ -24,7 +21,8 @@ server:
 }
 ```
 
-worker:
+#### worker的配置
+32G 和512 的worker config, 除了sectorsize不一样，其他一样
 ```
 $ cat config.toml
 scheduler_url = "http://10.10.19.17:3456"
@@ -43,11 +41,9 @@ wait_sec = 60
 num = 1
 supported_phase = ["CopyTask","CleanTask"]
 wait_sec = 60
-
 ```
 
-
-### 设置项
+###  命令的环境变量
 forcework 设置项： 
 512M的FIL_PROOFS_MAXIMIZE_CACHING=false
 32G的FIL_PROOFS_MAXIMIZE_CACHING为 1 或者 true
@@ -57,14 +53,14 @@ forcework 设置项：
 512M=536870912
 32G=34359738368
 34359738368
+
+FIL_PROOFS_MAXIMIZE_CACHING=true FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=trace BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &    
+ 
+ 
 ### 创世节点
 ```
-./lotus fetch-params  34359738368
-./lotus-seed pre-seal --sector-size  34359738368  --num-sectors 5
-新：
+./lotus fetch-params  8388608
 ./lotus-seed pre-seal --sector-size  8388608  --num-sectors 5
-
-
 ./lotus-seed genesis new localnet.json
 ./lotus-seed genesis add-miner localnet.json ~/.genesis-sectors/pre-seal-t01000.json
 nohup ./lotus daemon --lotus-make-genesis=dev.gen --genesis-template=localnet.json --bootstrap=false > lotus.log 2>&1 &
@@ -77,16 +73,32 @@ nohup ./lotus-storage-miner run --nosync >miner.log 2>&1 &
 
 ### 私链搭建
 
-#### lotus 搭建
+#### 启动lotus 
 ```
 第一次启动lotus
 nohup ./lotus daemon --genesis=./dev.gen --bootstrap=false --api 11234 > lotus.log 2>&1 & 
 ```
 
-#### miner 初始化
+#### 链同步
+```
+./lotus sync wait  只有链同步成功了， 才可以miner 初始化
+```
+
+#### 给矿工转钱
 ```
 ./lotus wallet new bls
 
+$ ./lotus state get-actor t3wj3dfbxnqfzjlgtq7yma66tmkdkc7p4bf2cmrtpw4gewvz5dvbsg6ws5nfk2otvm7a5ll2p3ts5rkjps3eia      
+Address:        t3wj3dfbxnqfzjlgtq7yma66tmkdkc7p4bf2cmrtpw4gewvz5dvbsg6ws5nfk2otvm7a5ll2p3ts5rkjps3eia
+Balance:        500
+Nonce:          0
+Code:           bafkqadlgnfwc6mjpmfrwg33vnz2a
+Head:           bafy2bzacedhvunyze3fak2sfb7gnkpdn42ya4glnrlrgziifbenudxg4koj56
+```
+
+#### miner 初始化
+初始化必须在链同步之后， 因为初始化要拿链上的信息
+```
 owner 是t3的初始化, 耗时5分钟
 ./lotus-storage-miner init --nosync --sector-size=536870912 --owner=t3qr64ae6azjwqewl5ivsyy7dvw73evaerkkiipavd3uqwyz7ybmpp2nxmbfr6r5jgrifmwjq2hnvsclgdpwma
 
@@ -94,7 +106,7 @@ ownee是t0的初始化  这个步骤是非常快的
 ./lotus-storage-miner init  --nosync --owner=t01002
 ```
 
-#### server 
+#### 重启server 
 
 ```
 nohup ./lotus-server >lotus-server.log 2>&1 &
@@ -119,9 +131,6 @@ FORCE_BUILDER_P1_WORKERS=1  FORCE_BUILDER_TASK_DELAY=1h  FORCE_BUILDER_AUTO_PLED
 FIL_PROOFS_MAXIMIZE_CACHING=false FIL_PROOFS_ALLOW_GENERATING_GROTH=1 RUST_LOG=debug BELLMAN_PROOF_THREADS=3 RUST_BACKTRACE=1 nohup ./force-remote-worker > force-remote-worker.log 2>&1 &
 FORCE_BUILDER_P1_WORKERS=28 FORCE_BUILDER_TASK_DELAY=1s FORCE_BUILDER_AUTO_PLEDGE_INTERVAL=1 TRUST_PARAMS=1 RUST_LOG=info RUST_BACKTRACE=1 FORCE_BUILDER_PLEDGE_TASK_TOTAL_NUM=56 nohup ./lotus-storage-miner run --mode=remote-sealer --server-api=http://10.10.10.207:3456 --dist-path=/mnt --nosync --groups=1 > ./sealer.log 2>&1 &
 ```
-
-sealer/目录下的 cache 是p1产生的
-sealer/目录下的 seal是p2产生的
 
 ### 同步命令
 #### ansible
