--- a/区块链/存储服务器.md
+++ b/区块链/存储服务器.md
@@ -51,3 +51,16 @@ Pc所在节点主机的 /mnt 是真正存放封装好的sector地方, 如：
 
 一般将pc 与p1 放在同一个主机节点下，
 
+### focefs   
+裸磁盘存储服务器， 有一个专门的代理进程， 让外部感知为 实现文件系统
+
+forcefs性能远不如nfs
+
+
+P2 P3 公用， 
+plarm amd ；P1  3个小时 。 
+ 
+P2 2个小时
+
+
+
